--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -2,31 +2,33 @@ name: 🌿 Auto Commit Journalier
 
 on:
   schedule:
-    - cron: '0 20 * * *'  # Tous les jours à 20h UTC (22h à Madagascar)
-  workflow_dispatch:       # Permet de déclencher manuellement aussi
+    - cron: "0 20 * * *" # Tous les jours à 20h UTC (22h à Madagascar)
+  workflow_dispatch: # Permet de déclencher manuellement aussi
 
 jobs:
   auto-commit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-    - name: 📥 Checkout du dépôt
-      uses: actions/checkout@v3
+      - name: 📥 Checkout du dépôt
+        uses: actions/checkout@v3
 
-    - name: 🕓 Configurer l'heure locale
-      run: sudo timedatectl set-timezone Indian/Antananarivo
+      - name: 🕓 Configurer l'heure locale
+        run: sudo timedatectl set-timezone Indian/Antananarivo
 
-    - name: ✍️ Modifier le fichier
-      run: |
-        echo "$(date) - auto commit 🌱" >> log.txt
+      - name: ✍️ Modifier le fichier
+        run: |
+          echo "$(date) - auto commit 🌱" >> log.txt
 
-    - name: 🔐 Configurer Git
-      run: |
-        git config user.name "Raymond Dzery Hago"
-        git config user.email "simplice2236@gmail.com"
+      - name: 🔐 Configurer Git
+        run: |
+          git config user.name "Raymond Dzery Hago"
+          git config user.email "simplice2236@gmail.com"
 
-    - name: ✅ Commit & Push
-      run: |
-        git add log.txt
-        git commit -m "Auto commit du $(date '+%Y-%m-%d')"
-        git push
+      - name: ✅ Commit & Push
+        run: |
+          git add log.txt
+          git commit -m "Auto commit du $(date '+%Y-%m-%d')"
+          git push
